[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Alexander Slesarenko <avslesarenko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.bench]
opt-level = 3

[[bench]]
name = "benchmarks"
path = "benches/lib.rs"
test = true
